style.css
/* ... */
.control-btn .icon {
    font-size: 24px;
}

.clock-container {
    text-align: center;
    width: 100%;
    height: 100vh;
    display: -webkit-box;
    display: -moz-box;
    display: -ms-flexbox;
    display: -webkit-flex;
    display: flex;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
    -moz-box-orient: vertical;
    -moz-box-direction: normal;
    -ms-flex-direction: column;
    -webkit-flex-direction: column;
    flex-direction: column;
    -webkit-box-pack: center;
    -moz-box-pack: center;
    -ms-flex-pack: center;
    -webkit-justify-content: center;
    justify-content: center;
    -webkit-box-align: center;
    -moz-box-align: center;
    -ms-flex-align: center;
    -webkit-align-items: center;
    align-items: center;
}

.flip-clock {
    display: inline-block;
    position: relative;
    white-space: nowrap;
}

.time-group {
    display: inline-block;
    margin: 0 1.5vw;
    vertical-align: middle;
    position: relative;
}

.digit-group {
    display: inline-block;
    position: relative;
    background: rgba(40, 40, 40, 0.6);
    padding: 2.5vh 1.5vw;
    -webkit-border-radius: 2.5vw;
    -moz-border-radius: 2.5vw;
    border-radius: 2.5vw;
    -webkit-box-shadow: 0 1.5vh 4vh rgba(0, 0, 0, 0.5);
    -moz-box-shadow: 0 1.5vh 4vh rgba(0, 0, 0, 0.5);
    box-shadow: 0 1.5vh 4vh rgba(0, 0, 0, 0.5);
}

body.light-theme .digit-group {
    background: rgba(255, 255, 255, 0.8);
    -webkit-box-shadow: 0 1.5vh 4vh rgba(0, 0, 0, 0.1);
    -moz-box-shadow: 0 1.5vh 4vh rgba(0, 0, 0, 0.1);
    box-shadow: 0 1.5vh 4vh rgba(0, 0, 0, 0.1);
}

.flip-unit {
    display: inline-block;
    margin: 0 0.4vw;
    vertical-align: middle;
}

.flip-card {
    position: relative;
    width: 18vw;
    height: 26vh;
    font-size: 18vw;
    font-weight: 700;
    color: #c0c0c0;
    text-align: center;
    -webkit-perspective: 1200px;
    -moz-perspective: 1200px;
    -ms-perspective: 1200px;
    perspective: 1200px;
}

.flip-card-top,
.flip-card-bottom {
    position: absolute;
    width: 100%;
    height: 50%;
    overflow: hidden;
    background: #2d2d2d;
    -webkit-border-radius: 1vw;
    -moz-border-radius: 1vw;
    border-radius: 1vw;
    -webkit-box-shadow: 0 0.5vh 1.5vh rgba(0, 0, 0, 0.3);
    -moz-box-shadow: 0 0.5vh 1.5vh rgba(0, 0, 0, 0.3);
    box-shadow: 0 0.5vh 1.5vh rgba(0, 0, 0, 0.3);
}

body.light-theme .flip-card-top,
body.light-theme .flip-card-bottom {
    background: #ffffff;
    color: #2d2d2d;
    -webkit-box-shadow: 0 0.5vh 1.5vh rgba(0, 0, 0, 0.1);
    -moz-box-shadow: 0 0.5vh 1.5vh rgba(0, 0, 0, 0.1);
    box-shadow: 0 0.5vh 1.5vh rgba(0, 0, 0, 0.1);
}

body.light-theme .flip-card {
    color: #2d2d2d;
}

.flip-card-top {
    top: 0;
    line-height: 26vh;
    -webkit-border-bottom-left-radius: 0;
    -webkit-border-bottom-right-radius: 0;
    -moz-border-radius-bottomleft: 0;
    -moz-border-radius-bottomright: 0;
    border-bottom-left-radius: 0;
    border-bottom-right-radius: 0;
}

.flip-card-top::after {
    content: '';
    position: absolute;
    bottom: 0;
    left: 0;
    right: 0;
    height: 2px;
    background: rgba(0, 0, 0, 0.4);
}

body.light-theme .flip-card-top::after {
    background: rgba(0, 0, 0, 0.1);
}

.flip-card-bottom {
    bottom: 0;
    line-height: 0;
    -webkit-border-top-left-radius: 0;
    -webkit-border-top-right-radius: 0;
    -moz-border-radius-topleft: 0;
    -moz-border-radius-topright: 0;
    border-top-left-radius: 0;
    border-top-right-radius: 0;
}

.flip-card-back {
    position: absolute;
    width: 100%;
    height: 100%;
    pointer-events: none;
}

.flip-card-back-top,
.flip-card-back-bottom {
    position: absolute;
    width: 100%;
    height: 50%;
    overflow: hidden;
    background: #2d2d2d;
    -webkit-border-radius: 16px;
    -moz-border-radius: 16px;
    border-radius: 16px;
    -webkit-box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
    -moz-box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
}

body.light-theme .flip-card-back-top,
body.light-theme .flip-card-back-bottom {
    background: #ffffff;
    -webkit-box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
    -moz-box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
}

.flip-card-back-top {
    top: 0;
    line-height: 26vh;
    -webkit-border-bottom-left-radius: 0;
    -webkit-border-bottom-right-radius: 0;
    -moz-border-radius-bottomleft: 0;
    -moz-border-radius-bottomright: 0;
    border-bottom-left-radius: 0;
    border-bottom-right-radius: 0;
    -webkit-transform-origin: 50% 100%;
    -moz-transform-origin: 50% 100%;
    -ms-transform-origin: 50% 100%;
    transform-origin: 50% 100%;
    -webkit-transform: rotateX(0deg);
    -moz-transform: rotateX(0deg);
    -ms-transform: rotateX(0deg);
    transform: rotateX(0deg);
}

.flip-card-back-top::after {
    content: '';
    position: absolute;
    bottom: 0;
    left: 0;
    right: 0;
    height: 2px;
    background: rgba(0, 0, 0, 0.4);
}

body.light-theme .flip-card-back-top::after {
    background: rgba(0, 0, 0, 0.1);
}

.flip-card-back-bottom {
    bottom: 0;
    line-height: 0;
    -webkit-border-top-left-radius: 0;
    -webkit-border-top-right-radius: 0;
    -moz-border-radius-topleft: 0;
    -moz-border-radius-topright: 0;
    border-top-left-radius: 0;
    border-top-right-radius: 0;
    -webkit-transform-origin: 50% 0%;
    -moz-transform-origin: 50% 0%;
    -ms-transform-origin: 50% 0%;
    transform-origin: 50% 0%;
    -webkit-transform: rotateX(90deg);
    -moz-transform: rotateX(90deg);
    -ms-transform: rotateX(90deg);
    transform: rotateX(90deg);
}

/* Flip animation */
.flip-card.flipping .flip-card-back-top {
    -webkit-animation: flipTop 0.6s ease-in-out;
    -moz-animation: flipTop 0.6s ease-in-out;
    -ms-animation: flipTop 0.6s ease-in-out;
    animation: flipTop 0.6s ease-in-out;
}
/* ... */

